ref: http://jingyan.baidu.com/article/335530da8b2b0419cb41c338.html
http://jingyan.baidu.com/article/335530da8b2b0419cb41c338.html

--- a/mac_iPad_iPhone/install_homebrew_on_mac_air_OS_X_Yosemite_10.10.5
+++ b/mac_iPad_iPhone/install_homebrew_on_mac_air_OS_X_Yosemite_10.10.5
@@ -148,4 +148,4 @@
     - Further documentation: 
         https://git.io/brew-docs
     
-    
+# ref:  http://jingyan.baidu.com/article/335530da8b2b0419cb41c338.html
