Update and rename python/how_to_fix_PIL.ImageTk_PhotoImage_RuntimeError:_Too_early_to_create_image_in_Python_2.7 to python/gui/how_to_fix_PIL.ImageTk_PhotoImage_RuntimeError:_Too_early_to_create_image_in_Python_2.7
Tkinter has to be instantiated before you call ImageTk.PhotoImage():
    <=> No Tkinter.Tk() or Tkinter.Toplevel() is called before ImageTk.PhotoImage().
fix: run .Tk() or .Toplevel() before ImageTk.PhotoImage().

--- a/python/gui/how_to_fix_PIL.ImageTk_PhotoImage_RuntimeError:_Too_early_to_create_image_in_Python_2.7
+++ b/python/gui/how_to_fix_PIL.ImageTk_PhotoImage_RuntimeError:_Too_early_to_create_image_in_Python_2.7
@@ -17,7 +17,7 @@
     RuntimeError: Too early to create image
     
 2) Root cause:  Tkinter has to be instantiated before you call ImageTk.PhotoImage():
-    <=> No TKinter.Tk() or Tkinter.Toplevel() is called before ImageTk.PhotoImage().
+    <=> No Tkinter.Tk() or Tkinter.Toplevel() is called before ImageTk.PhotoImage().
 
 3) fix: run .Tk() or .Toplevel() before ImageTk.PhotoImage().
     
